--- a/webpage.html
+++ b/webpage.html
@@ -167,7 +167,7 @@ height:70px;
 background-color:royalblue;
 font-size:0px;
 font-family:"Impact";
-color: royalblue;
+color: darkblue;
 text-align: center; 
 vertical-align: middle;
 -webkit-transition: all 1s ease-in-out 0s;
