--- a/webpage.html
+++ b/webpage.html
@@ -7,7 +7,8 @@
 <title>(sample_baloons)</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=7">
-<!--flip/touch do.js -->
+<!--flick/touch do.js -->
+<!--LTE in network-->
 <!--Tablet/iOS/Android -->
 <!--@at_media@in_use_only_view-->
 <!--nocode_for_webviewer.inAndroidApp_include.{:ssh;ssl;}-->
