--- a/webpage.html
+++ b/webpage.html
@@ -1,13 +1,11 @@
-<html>
-<head>
-
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 <title>(sample_baloons)</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=7">
-<!--flip/touch do.js -->
+<!--flick/touch do.js -->
+<!--LTE in network-->
 <!--Tablet/iOS/Android -->
 <!--@at_media@in_use_only_view-->
 <!--nocode_for_webviewer.inAndroidApp_include.{:ssh;ssl;}-->
@@ -21,7 +19,7 @@
 
 <style type="text/css">
    
-#menu-right
+#menu 
    {
    	opacity: 0.88;
    }
@@ -60,8 +58,8 @@
    color: black;
 }  
 
-  #menu-left {
- 	font-family:"Times New Roman", "Century Gothic", "MS Gothic";
+  #menu {
+ 	font-family: "Century Gothic", "MS Gothic";
 
  }
 
@@ -74,8 +72,6 @@ img {
 #menu1 {;:}
 
  .ui-content {padding:0;}
-
-#header2, #header3, #footer2, #footer3, #header4, #footer4 {;}
 
 }
 
@@ -96,309 +92,8 @@ body {
   text-align: center;
 }
 
-#idi000 {
-
-width:70px;
-height:70px;
-background-color:gold;
-font-size:0px;
-font-family:"Impact";
-color: gold;
-text-align: center; 
-vertical-align: middle;
--webkit-transition: all 1s ease-in-out 0s;
-box-shadow: 5px 5px 10px gray;}
-
-/*move_weight_bold*/
-#idi000:hover {width: 350px;
-font-size:38px;
-background-color: darkorange;
-color: white;
-box-shadow: 3px 18px 33px #333333;}
-
-
-#id004 {
-
-width:70px;
-height:70px;
-background-color:deepskyblue;
-font-size:0px;
-font-family:"Impact";
-color: deepskyblue;
-text-align: center; 
-vertical-align: middle;
--webkit-transition: all 1s ease-in-out 0s;
-box-shadow: 5px 5px 10px gray;}
-
-/*move_weight_bold*/
-#id004:hover {width: 500px;
-font-size:38px;
-background-color:blue;
-color: white;
-box-shadow: 3px 18px 33px #333333;}
-
-
-
-#id003 {
-
-width:70px;
-height:70px;
-background-color:magenta;
-font-size:0px;
-font-family:"Impact";
-color: magenta;
-text-align: center; 
-vertical-align: middle;
--webkit-transition: all 1s ease-in-out 0s;
-box-shadow: 5px 5px 10px gray;}
-
-/*move_weight_bold*/
-#id003:hover {width: 500px;
-font-size:38px;
-background-color:red;
-color: white;
-box-shadow: 3px 18px 33px #333333;}
-
-
-#id005 {
-
-width:70px;
-height:70px;
-background-color:royalblue;
-font-size:0px;
-font-family:"Impact";
-color: darkblue;
-text-align: center; 
-vertical-align: middle;
--webkit-transition: all 1s ease-in-out 0s;
-box-shadow: 5px 5px 10px gray;}
-
-/*move_weight_bold*/
-#id005:hover {
-width: 400px;
-height: 500px;
-font-size:42px;
-background-color:midnightblue;
-color: white;
-box-shadow: 3px 18px 33px #333333;}
-
-
-#id003 {
-width:70px;
-height:70px;
-background-color: teal;
-font-size:0px;
-font-family:"Impact";
-color: teal;
-text-align: center; 
-vertical-align: middle;
--webkit-transition: all 1s ease-in-out 0s;
-box-shadow: 5px 5px 10px gray;}
-
-/*move_weight_bold*/
-#id003:hover {
-width: 400px;
-height: 500px;
-font-size:38px;
-background-color: #004f2a;
-color: white;
-box-shadow: 3px 18px 33px #333333;}
-
-
-#id002 {
-width:70px;
-height:70px;
-background-color:#9932cc;
-font-size:0px;
-font-family:"Impact";
-color: #9932cc;
-text-align: center; 
-vertical-align: middle;
--webkit-transition: all 1s ease-in-out 0s;
-box-shadow: 5px 5px 10px gray;}
-
-/*move_weight_bold*/
-#id002:hover {
-width: 400px;
-height: 400px;
-font-size:48px;
-background-color:violet;
-color: white;
-box-shadow: 3px 18px 33px #333333;}
-
-
 </style>
 
-</head>
-<body>
-
 <div data-role="page" id="page1">
-  <div id="header1" data-role="header" data-theme="b">
-    <a href="#menu-left" data-role="button" data-icon="carat-r" data-iconpos="notext">&nbsp;</a>
-    <a href="#menu-right" data-role="button" data-icon="bars" data-iconpos="notext">&nbsp;</a>
-    <h1><i>CORPORATE NAME</i></h1>
-  </div>
-  <div role="main" class="ui-content" id="id1" width="80%" height="80%" >
-  
-
-
-
-
-
-<table width="800px" height="500px">
-<tr>
-<td><div id="id000"></div>
-</td>
-<td>
-<div id="id004">what's name?</td>
-<td>
-
-<div id="id001"> </div>
-</td></tr>
-<tr><td><div id="id002">where do you live...?</div></td>
-<td>
-  <div id="id003">where do you want to go?</div></td></tr><tr><td><div id="id005">what's kind of your favorite?</div></td><td></td></tr><tr><td></td><td></td></tr></table>
-
-
-
-
-
-
-
-
-
-
-
-<!--
-  	<img src="top02.png" width="100%" height="100%" id="bg"> <- コンテンツ内画像配置 -->
-       <!-- <img src="top01.png" width="100%" height="100%" id="bg" - コンテンツ内画像配置 --> -->
-<div id="message1">
-
-	<h4>msg</h4>
-	<h4><i>contents</i></h6>
-
-
-</div>
-
-
-  </div>
-
-
-
-<div data-role="panel" id="menu-left" data-theme="a" data-animate="true">
-  	<!-- <img src="logo.png">　 -->
-<ul data-role="listview" id="menu1">
-<li>
-<a href="#" data-rel="close">TOP</a></li>
-        <li><a data-rel="close" ata-ajax="false" class="anchor" href="#job">contents</a></li>
-    <li><a data-rel="close" ata-ajax="false" class="anchor" href="#view3_">media</a></li>
-    <li><a data-rel="close" ata-ajax="false" class="anchor" href="#contact">CONTACT</a></li>
-  </ul>
-  
-      
-</div>
-<!--
-<div data-role="panel" id="menu-right" data-display="overlay" data-position="right" data-theme="a"> <右パネルの表示-->
-<!--  <a href="#" class="ui-btn-right" data-rel="close" data-role="button" data-icon="delete" data-iconpos="notext">&nbsp;</a> 右のボタンicon-->
-  
-
-</div>
-<!--右パネルの表示　ここまで --> -->
-</div>
-
-<!-- ここまでトップ  -->
-
-<div data-role="page" id="view3_" >
-  <div id="header2" data-role="header"　 data-add-back-btn="true">
-    <h1><i>title</i></h1>
-  </div>
-  <div role="main" class="ui-content" id="view3" width="100%" height="100%" >
- <!-- <img src="20170702.jpg" width="100%" height="100%" id="bg2"> コンテンツ内画像配置-->
-<div id="message2">
-<h5>title<BR><BR>
-
-
-</h5></div>
-
-
-  </div>
-
-
-  <div id="footer2" data-role="footer">
-    <h3>2023 - Copyright All Rights Reserved.</h3> 
-  </div>
-
-</div>
-
-<div id="message3">
-
-<h5>
-contents<BR><BR>
-
-
-    
-    </h5></div>
-
-
-  </div>
-
-
-  <div id="footer3" data-role="footer">
-    <h3>2023 - Copyright All Rights Reserved.</h3>
-  </div>
-
-</div>
-
-<!-- ここまでリクルート-->
-
-
-<div data-role="page" id="contact" data-theme="a">
-  <div id="header4" data-role="header"　 data-add-back-btn="true"　class="uni-bar">
-    <h1><i>title</i></h1>
-  </div>
-  <div role="main" class="ui-content" id="contactmain" width="100%" height="100%" >
  
-
-<div id="message4">
-
-<h5>
-
-
-
-</h5></div>
-<!-- <img src="contact.jpg" width="100%" height="100%" id="bg4"> -->
-  </div>
-
-
-  <div id="footer4" data-role="footer">
-    <h3>2023 - Copyright All Rights Reserved.</h3>
-  </div>
-
 </div>
-<!--ここまでコンタクト-->
-
-<div data-role="page" id="job" data-theme="a">
-  <div id="header5" data-role="header"　 data-add-back-btn="true"　class="uni-bar">
-    <h1><i>title</i></h1>
-  </div>
-  <div role="main" class="ui-content" id="jobmain" width="100%" height="100%" >
- 
-<!-- <img src="job.jpg" width="100%" height="100%" id="bg4"> -->
-<div id="message5">
-
-<BR><BR>
-
-
-</h5></div>
-<!-- <img src="2017.jpg" width="100%" height="100%" id="bg5"> -->
-  </div>
-
-
-  <div id="footer5" data-role="footer">
-    <h3>2023 - Copyright All Rights Reserved.</h3>
-  </div>
-
-</div>
-
-</body>
-</html>
