--- a/webpage.html
+++ b/webpage.html
@@ -58,6 +58,13 @@
    color: black;
 }  
 
+		#telephone-ring  {  
+	width: 100%;
+    border: 1px dashed #999;
+       background-color: rgba( 255, 255, 255, 0.5 );
+   color: black;
+}  
+
   #menu {
  	font-family: "Century Gothic", "MS Gothic"; }
 
